[tool.poetry]
name = "marvin-bot-1"
version = "0.1.0"
description = ""
authors = ["LibanAlasow <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
ro-py = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
